src/objects/SREC__c.object
<CustomObject>
    <fields>
        <fullName>BlueWave_Fee__c</fullName>
        <label>BlueWave Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <label>Broker Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distributed_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distributed to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minted_Date__c</fullName>
        <label>Minted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_SRECs__c</fullName>
        <label>Number of SRECs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Update</label>
        <referenceTo>Energy_Usage_Update__c</referenceTo>
        <relationshipLabel>SRECs</relationshipLabel>
        <relationshipName>SRECs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchased_by_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchased by Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarter_Begin_Date__c</fullName>
        <inlineHelpText>The beginning of the period in which the SREC was earned</inlineHelpText>
        <label>Quarter: Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_End_Date__c</fullName>
        <inlineHelpText>End of the quarter in which SRECs were earned</inlineHelpText>
        <label>Quarter: End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residential_Equipment__c</fullName>
        <label>Residential Equipment</label>
        <referenceTo>Residential_Equipment__c</referenceTo>
        <relationshipLabel>SRECs</relationshipLabel>
        <relationshipName>SRECs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SREC_Identification_Number__c</fullName>
        <label>SREC Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Value__c</fullName>
        <label>SREC Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Market Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Strip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_to_Customer__c</fullName>
        <formula>SREC_Value__c -  Broker_Fee__c - BlueWave_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value to Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SREC</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SREC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SRECs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>